syntax = "proto3";
package aioz.mint.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "google/api/annotations.proto";
import "aioz/mint/v1/mint.proto";

option go_package = "github.com/AIOZNetwork/go-aioz/x/mint/types";

// Query provides defines the gRPC querier service.
service Query {

  // Params returns the total set of minting parameters.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/aioz/mint/v1/params";
  }

  // Inflation returns the current minting inflation value.
  rpc Inflation(QueryInflationRequest) returns (QueryInflationResponse) {
    option (google.api.http).get = "/aioz/mint/v1/inflation";
  }

  // AnnualInflation returns the current minting annual inflation value.
  rpc AnnualInflation(QueryAnnualInflationRequest) returns (QueryAnnualInflationResponse) {
    option (google.api.http).get = "/aioz/mint/v1/annual_inflation";
  }
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {

  // params defines the parameters of the module.
  Params params = 1 [(gogoproto.nullable) = false];
}

// QueryInflationRequest is the request type for the Query/Inflation RPC method.
message QueryInflationRequest {}

// QueryInflationResponse is the response type for the Query/Inflation RPC
// method.
message QueryInflationResponse {

  // inflation is the current minting inflation value.
  bytes inflation = 1 [
    (cosmos_proto.scalar)  = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
}

// QueryAnnualInflationRequest is the request type for the Query/AnnualInflation
// RPC method.
message QueryAnnualInflationRequest {}

// QueryAnnualInflationResponse is the response type for the Query/AnnualInflation
// RPC method.
message QueryAnnualInflationResponse {

  // annual_inflation is the current minting annual inflation value.
  bytes annual_inflation = 1 [
    (cosmos_proto.scalar)  = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
}

// QueryAnnualProvisionsRequest is the request type for the
// Query/AnnualProvisions RPC method.
message QueryAnnualProvisionsRequest {}

// QueryAnnualProvisionsResponse is the response type for the
// Query/AnnualProvisions RPC method.
message QueryAnnualProvisionsResponse {

  // annual_provisions is the current minting annual provisions value.
  bytes annual_provisions = 1 [
    (cosmos_proto.scalar)  = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
}
